# ML-Mentor-Agents

./: README.md  check-dependencies.sh  registry.toml
Agents/DataAnalysisAgent/: .env_sample  Dockerfile  coral_agent.toml  main.py  pyproject.toml  readme.md  run_agent.sh
Agents/DataAnalysisAgent/.github/workflows/: docker-image.yml
Agents/ModelSelectionAgent/: .env_sample  Dockerfile  README.md  coral-agent.toml  main.py  pyproject.toml  run_agent.sh
Agents/ModelSelectionAgent/.github/workflows/: docker_image.yml
